# firecrawl_projects

./: Procfile  README.md  firecrawl_hacker_news_data_2024_11_29_12_44.json  ph_top_products_2024_11_30.json  requirements.txt
.github/workflows/: check_competitor_prices.yml  check_prices.yml  ph-scraper.yml  scraper.yml
automated_price_tracking/: README.md  check_prices.py  database.py  pyproject.toml  requirements.txt  scraper.py  ui.py
automated_price_tracking/data/: price_history.db  products.json
automated_price_tracking/src/: config.py  scraper.py  storage.py  ui.py
basic_webhook_fastapi/: crawl_monitor.py  pyproject.toml  requirements.txt
competitor-price-monitor/: .env.example  README.md  pyproject.toml  requirements.txt
competitor-price-monitor/src/: app.py  check_prices.py  scraper.py
football-data-enrichment/: pyproject.toml  script.py
product-hunt-scraper/: ph_top_products_2024_11_30.json  scraper.py
scheduling_scrapers/.github/workflows/: scraper.yml
